# safety-lens

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/plans/: 2026-02-11-safety-lens.md
posts/: huggingface-post.md  linkedin-post.md
safety_lens/: __init__.py  core.py  eval.py
safety_lens/vectors/: __init__.py
tests/: conftest.py  test_core.py  test_eval.py  test_vectors.py
